# yeti-suna-ai

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  deploy.sh  docker-compose.local.yaml  docker-compose.yaml  fix-auth-instructions.md  index.html  nginx.conf  package-lock.json  setup.py
backend/: .env.example  .env.template  .gitignore  Dockerfile  README.md  api.py  celery_app.py  docker-compose.prod.yml  docker-compose.yml  fly.production.toml  fly.staging.toml  immigration_api.py  immigration_schema.sql  pyproject.toml  requirements.txt  run.sh  run_agent_background.py
backend/agent/: agent_builder_prompt.py  api.py  gemini_prompt.py  gemini_prompt_more_tools.py  memory_manager.py  prompt.py  prompt.txt  run.py  run_utils.py  tasks.py
backend/agentpress/: context_manager.py  response_processor.py  thread_manager.py  tool_registry.py
backend/database/: dal.py  schema.py  sqlite_schema.py
backend/docker/: Dockerfile
backend/docs/: e2b_integration.md
backend/kb/: __init__.py  api.py
backend/mcp_local/: credential_manager.py
backend/models/: api_models.py
backend/sandbox/: api.py  e2b_sandbox.py  provider.py  runtime_api.py  runtime_manager.py  sandbox.py  tool_base.py
backend/scheduling/: api.py
backend/services/: billing.py  database.py  embedding.py  langfuse.py  llm.py  redis.py  sqlite_db.py  supabase.py
backend/storage/: local_storage.py
backend/supabase/: config.toml  email-template.html
backend/tests/: test_async_execution.py  test_e2b_integration.py  test_sb_browser_tool.py
backend/triggers/: __init__.py  api.py  models.py
(+294 files in other folders)
